# digital-twin

.github/workflows/: deploy.yml  destroy.yml
backend/: .gitignore  function_app.py  me.txt  pyproject.toml  requirements.txt  server.py
backend/data/: facts.json  summary.txt
frontend/app/: page.tsx
frontend/components/: twin.tsx
terraform/: backend.tf
