[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-mgmt-compute>=37.0.0",
    "azure-storage-blob>=12.26.0",
    "boto3>=1.40.45",
    "fastapi>=0.118.0",
    "mangum>=0.19.0",
    "openai>=2.1.0",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
